--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,10 @@ Django = "^4.1.1"
 pytest = "^7.1.3"
 ipython = "^8.5.0"
 pytest-django = "^4.5.2"
+vue = "^0.0.1"
+node = "^1.1"
+djangorestframework = "^3.14.0"
+django-cors-headers = "^3.13.0"
 
 
 [build-system]
