--- a/whist_ui/package.json
+++ b/whist_ui/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "howler": "^2.2.3",
     "lodash": "^4.17.21",
     "vue": "^3.2.41"
   },
