--- a/whist_ui/package.json
+++ b/whist_ui/package.json
@@ -8,7 +8,8 @@
     "test:unit": "vitest --environment jsdom --root src/",
     "test:e2e": "start-server-and-test preview :4173 'cypress run --e2e'",
     "test:e2e:dev": "start-server-and-test 'vite dev --port 4173' :4173 'cypress open --e2e'",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
+    "test": "jest"
   },
   "dependencies": {
     "howler": "^2.2.3",
@@ -16,15 +17,19 @@
     "vue": "^3.2.41"
   },
   "devDependencies": {
+    "@babel/core": "^7.21.3",
     "@rushstack/eslint-patch": "^1.1.4",
+    "@testing-library/vue": "^7.0.0",
     "@vitejs/plugin-vue": "^3.1.2",
     "@vitejs/plugin-vue-jsx": "^2.0.1",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/test-utils": "^2.1.0",
+    "babel-jest": "^29.5.0",
     "cypress": "^10.10.0",
     "eslint": "^8.22.0",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-vue": "^9.3.0",
+    "jest": "^29.5.0",
     "jsdom": "^20.0.1",
     "prettier": "^2.7.1",
     "start-server-and-test": "^1.14.0",
